--- a/Notes/Notes/wwwroot/css/site.css
+++ b/Notes/Notes/wwwroot/css/site.css
@@ -93,4 +93,22 @@ body {
   margin-left: 150px;
 }
 
+.cardShadow{
+  box-shadow: 0px 0px 10px black;
+}
 
+.card-content{
+  width: 300px;
+  padding: 10px;
+  border: 1px solid #b799c3;
+  box-shadow: 0px 0px 10px black;
+}
+
+.cardPosition{
+  display: flex;
+  justify-content: center;
+}
+
+.form-elements{
+  padding-top: 10px;
+}
