--- a/Notes/Notes/Views/Home/Index.cshtml
+++ b/Notes/Notes/Views/Home/Index.cshtml
@@ -5,7 +5,7 @@
 
 <div class="row">
 	<div class="col-3">
-		<div class="card text-bg-primary mb-3" style="max-width: 18rem;">
+		<div class="card text-bg-primary mb-3 cardShadow" style="max-width: 18rem;">
 			<div class="card-header">Header</div>
 			<div class="card-body">
 				<h5 class="card-title">Primary card title</h5>
