--- a/Notes/Notes/Views/Shared/_Layout.cshtml
+++ b/Notes/Notes/Views/Shared/_Layout.cshtml
@@ -16,7 +16,9 @@
 	<section class="navigation">
 		<div class="sidenav">
 			<div class="logo">
-				<img src="~/images/label.png" asp-append-version="true" alt="" style="width: 100px">
+				<a asp-action="Index" asp-controller="Home">
+					<img src="~/images/label.png" asp-append-version="true" alt="" style="width: 100px">
+				</a>
 			</div>
 			<div class="nav-items">
 				<a href="#">Profile</a>
