--- a/Notes/Notes/Views/Notes/AddNotes.cshtml
+++ b/Notes/Notes/Views/Notes/AddNotes.cshtml
@@ -1,24 +1,33 @@
 @using Notes.Enum
+@using Microsoft.EntityFrameworkCore.Metadata.Internal
 @model NotesViewModel
 
 <div class="row">
 	<div class="col cardPosition">
 		<div class="card-content">
+			@if (ViewBag.Failed == true)
+			{
+				<div class="alert alert-danger" role="alert">
+					Title field must be filled
+				</div>
+			}
 			<form method="post" asp-action="AddNotes" asp-controller="Notes">
 				<input type="hidden" asp-for="LastUpdate" value="@DateTime.Now.ToShortTimeString()">
 				<div class="form-group form-elements">
 					<label class="text-dark" asp-for="Title"></label>
 					<input asp-for="Title" class="form-control">
+					<span class="text-danger" asp-validation-for="Title"></span>
 				</div>
 				<div class="form-group form-elements">
 					<label class="text-dark" asp-for="Description"></label>
 					<textarea asp-for="Description" class="form-control" cols="5" rows="5"></textarea>
+					<span asp-validation-for="Description"></span>
 				</div>
 				<div class="form-group form-elements">
-					<select class="text-dark" asp-for="Color" asp-items="@Html.GetEnumSelectList<Colors>()"></select>
+					<select class="text-dark form-select" asp-for="Color" asp-items="@Html.GetEnumSelectList<Colors>()"></select>
 				</div>
 				<div class="form-group form-elements">
-					<button class="btn btn-success" type="submit">Add</button>
+					<button class="btn btn-success add-style" type="submit">Add</button>
 				</div>
 			</form>
 		</div>
