--- a/FleaMarket/FleaMarket/Views/Shared/LoginAndRegistraionPartial.cshtml
+++ b/FleaMarket/FleaMarket/Views/Shared/LoginAndRegistraionPartial.cshtml
@@ -1,2 +1,20 @@
-@model TModel
-
+<div class="navbar-nav ml-auto">
+	<li class="nav-item">
+		<a class="nav-link text-dark"
+		   asp-action="" asp-controller="">
+			<img src="~/images/favourite-logo.png" alt="" style="width: 25px">
+		</a>
+	</li>
+	<li class="nav-item">
+		<a class="nav-link text-dark"
+		   asp-action="Login" asp-controller="Account">
+			<img src="~/images/signIn.png" alt="" style="width: 25px"> SignIn
+		</a>
+	</li>
+	<li class="nav-item">
+		<a class="nav-link text-dark"
+		   asp-action="Register" asp-controller="Account">
+			<img src="~/images/singUp.png" alt="" style="width: 25px"> SignUp
+		</a>
+	</li>
+</div>
