Added many to many and added logid added to favourite

--- a/FleaMarket/FleaMarket/Views/Account/Login.cshtml
+++ b/FleaMarket/FleaMarket/Views/Account/Login.cshtml
@@ -3,7 +3,7 @@
 <div class="row login-view">
 	<div class="col-6">
 		<div class="ImageProfile">
-			<img src="/images/iconLogin/logoIcon.png" alt="">
+			<img src="/images/iconLogin/loginBackroundImage.jpeg" alt="" style="width: 650px">
 		</div>
 	</div>
 	<div class="col-6">
