--- a/FleaMarket/FleaMarket/Views/Main/ViewCarCategory.cshtml
+++ b/FleaMarket/FleaMarket/Views/Main/ViewCarCategory.cshtml
@@ -9,8 +9,8 @@
 		{
 			<div class="col col-3">
 				<div class="card border-dark" style="width: 18rem; width: 286px; box-shadow: 0px 0px 5px gray">
-					<a asp-action="" asp-controller="" asp-route-id="@view.Id">
-						<img src="@view.Image" class="card-img-top" alt="...">
+					<a asp-action="ViewDetailAnnouncement" asp-controller="Main" asp-route-id="@view.Id">
+						<img src="@view.Image" style="height: 200px" class="card-img-top" alt="...">
 					</a>
 					<div class="card-body">
 						<h5 class="card-title">@view.Title</h5>
