--- a/FleaMarket/FleaMarket/Views/Shared/LoginAndRegistraionPartial.cshtml
+++ b/FleaMarket/FleaMarket/Views/Shared/LoginAndRegistraionPartial.cshtml
@@ -1,20 +1,49 @@
+@using FleaMarket.Authoriz
+@using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Mvc.TagHelpers
+@inject UserManager<ApplicationUser> userManager; 
+@inject SignInManager<ApplicationUser> signInManager;
 <div class="navbar-nav ml-auto">
-	<li class="nav-item">
-		<a class="nav-link text-dark"
-		   asp-action="" asp-controller="">
-			<img src="~/images/favourite-logo.png" alt="" style="width: 25px">
-		</a>
-	</li>
-	<li class="nav-item">
-		<a class="nav-link text-dark"
-		   asp-action="Login" asp-controller="Account">
-			<img src="~/images/signIn.png" alt="" style="width: 25px"> SignIn
-		</a>
-	</li>
-	<li class="nav-item">
-		<a class="nav-link text-dark"
-		   asp-action="Register" asp-controller="Account">
-			<img src="~/images/singUp.png" alt="" style="width: 25px"> SignUp
-		</a>
-	</li>
+	@if (signInManager.IsSignedIn(User))
+	{
+		<li class="nav-item">
+			<a class="nav-link text-dark"
+			   asp-action="GetViewFavourites" asp-controller="Favourite">
+				<img src="~/images/favourite-logo.png" alt="" style="width: 25px">
+			</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link text-dark"
+			   asp-action="" asp-controller="">
+				<img src="~/images/shop-icon.png" alt="" style="width: 25px">
+			</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link text-dark"
+			   asp-action="" asp-controller="">
+				<img src="~/images/profile-icon.png" alt="" style="width: 25px">
+			</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link text-dark"
+			   asp-action="Logout" asp-controller="Account">
+				<img src="~/images/logout-icon.png" alt="" style="width: 25px">
+			</a>
+		</li>
+	}
+	else
+	{
+		<li class="nav-item">
+			<a class="nav-link text-dark"
+			   asp-action="Login" asp-controller="Account">
+				<img src="~/images/signIn.png" alt="" style="width: 25px"> SignIn
+			</a>
+		</li>
+		<li class="nav-item">
+			<a class="nav-link text-dark"
+			   asp-action="Register" asp-controller="Account">
+				<img src="~/images/singUp.png" alt="" style="width: 25px"> SignUp
+			</a>
+		</li>
+	}
 </div>
