--- a/FleaMarket/FleaMarket/Views/Shared/_Layout.cshtml
+++ b/FleaMarket/FleaMarket/Views/Shared/_Layout.cshtml
@@ -37,10 +37,13 @@
 							<li>
 								<a class="dropdown-item text-dark" href="#">Clothes</a>
 							</li>
+							<li>
+								<a class="dropdown-item text-dark" asp-action="ViewBeerCategory" asp-controller="Main">Beers</a>
+							</li>
 						</ul>
 					</li>
-					<a class="nav-link text-dark" href="#">Features</a>
-					<a class="nav-link text-dark" href="#">Pricing</a>
+					<a class="nav-link text-dark" asp-action="ViewEmploymentsCompany" asp-controller="Main">Our team</a>
+					<a class="nav-link text-dark" asp-action="ViewRecipeCategory" asp-controller="Main">Recipes</a>
 				</div>
 				<partial name="LoginAndRegistraionPartial"/>
 			</div>
