--- a/FleaMarket/FleaMarket/Views/_ViewImports.cshtml
+++ b/FleaMarket/FleaMarket/Views/_ViewImports.cshtml
@@ -1,3 +1,6 @@
 ﻿@using FleaMarket
 @using FleaMarket.Models
+@using FleaMarket.API.Models
+@using FleaMarket.API.Models.Users
+@using FleaMarket.API.Models.Recipe
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
